fix: add cursor:pointer for expanded-clickable-row in dark mode

--- a/frontend/src/container/ApiMonitoring/Explorer/Explorer.styles.scss
+++ b/frontend/src/container/ApiMonitoring/Explorer/Explorer.styles.scss
@@ -105,6 +105,10 @@
 				background: rgba(255, 255, 255, 0.04);
 			}
 
+			.ant-table-tbody > tr.expanded-clickable-row:hover > td {
+				cursor: pointer;
+			}
+
 			.ant-table-cell:first-child {
 				text-align: justify;
 			}
